--- a/style.css
+++ b/style.css
@@ -1,91 +1,53 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-
-.main{
-    width: 100%;
-    background: black;
-    background-position: center;
-    background-size: cover;
-    height: 109vh;
-}
-
-.navbar {
-    width: 1200px;
-    height: 75px;
-    margin: auto;
-}
-
-.icon {
-    width: 200px;
-    float: left;
-    height: 70px;
-}
-
-.logo-img {
-    float: left;
-    padding-left: 10%;
-}
-
-.menu {
-    width: 400px;
-    float: left;
-    height: 70px;
-
-}
-
-ul {
-    float: left;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-ul li {
-    list-style: none;
-    margin-left: 60px;
-    margin-top: 27px;
-    font-size: 14px;
-}
-
-ul li a {
-    text-decoration: none;
+* {
+    background-color: black;
     color: white;
-    font-family: Arial;
-    font-weight: bold;
-    transition: 0.4s ease-in-out;
 }
 
-ul li a:hover {
-    color: grey;
+.logo {
+    text-align: center;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    margin: 0;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bolder;
+    font-size: 35pt;
+    background-image: linear-gradient(to right, rgb(113, 121, 126), rgb(132, 136, 132));
+    -webkit-background-clip: text;
+    color: transparent;
+    letter-spacing: .2rem;
 }
 
-.content {
-    width: 1200px;
-    height: auto;
-    margin: auto;
-    color: #fff;
-    position: relative;
+[data-tab-content] {
+    display: none;
 }
 
-.content .par {
-    padding-left: 20px;
-    padding-bottom: 25px;
-    font-family: Arial;
-    letter-spacing: 1.2px;
-    line-height: 30px;
+.active[data-tab-content] {
+    display: block;
 }
 
-.content h1 {
-    font-family: 'Times New Roman';
-    font-size: 50px;
-    padding-left: 20px;
-    margin-top: 9%;
-    letter-spacing: 2px;
+.tabs {
+    display: flex;
+    justify-content: space-around;
+    list-style-type: none;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    margin: 0;
+    border: 1px solid;
+    border-radius: 10px;
 }
 
-span {
-    font-family: cursive;
+.tab {
+    cursor: pointer;
 }
 
+.tab.active {
+    background-color: #888;
+}
+
+.tab:hover {
+    background-color: #888;
+}
+
+ #home {
+    text-align: center;
+}
